// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Legend As Heading 1`] = `
<fieldset aria-labelledby="<removed>">
  <legend
    data-weight="medium"
    id="<removed>"
  >
    <h2 data-size="sm">
      Hvilke tjenester bruker du?
    </h2>
  </legend>
  <p
    data-variant="default"
    id="<removed>"
  >
    Påloggingssystemer hos Udir
  </p>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      id="<removed>"
      name="components-fieldset--legend-as-heading-feide"
      type="checkbox"
      value="feide"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Feide
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      id="<removed>"
      name="components-fieldset--legend-as-heading-UIDP"
      type="checkbox"
      value="UIDP"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      UIDP
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      id="<removed>"
      name="components-fieldset--legend-as-heading-UBAS"
      type="checkbox"
      value="UBAS"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      UBAS
    </label>
  </ds-field>
</fieldset>
`;

exports[`Preview 1`] = `
<fieldset aria-labelledby="<removed>">
  <legend
    data-weight="medium"
    id="<removed>"
  >
    Hvilken fjordarm bor du ved?
  </legend>
  <p
    data-variant="default"
    id="<removed>"
  >
    Valget vil hjelpe oss å forbedre innholdet vi viser deg.
  </p>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      id="<removed>"
      name="radio"
      type="radio"
      value="barsnesfjorden"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Barsnesfjorden
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      id="<removed>"
      name="radio"
      type="radio"
      value="eidsfjorden"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Eidsfjorden
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      id="<removed>"
      name="radio"
      type="radio"
      value="ingen-av-de"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Ingen av de
    </label>
  </ds-field>
</fieldset>
`;

exports[`With Checkbox 1`] = `
<fieldset aria-labelledby="<removed>">
  <legend
    data-weight="medium"
    id="<removed>"
  >
    Godtar du vilkårene?
  </legend>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      id="<removed>"
      type="checkbox"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Ja, jeg godtar
    </label>
  </ds-field>
</fieldset>
`;

exports[`With Textfield 1`] = `
<fieldset aria-labelledby="<removed>">
  <legend
    data-weight="medium"
    id="<removed>"
  >
    <h2 data-size="sm">
      Adresse
    </h2>
  </legend>
  <p
    data-variant="default"
    id="<removed>"
  >
    Skriv inn adressen din for å motta post fra oss.
  </p>
  <ds-field>
    <label
      data-weight="medium"
      for="<removed>"
    >
      Gateadresse
    </label>
    <div>
      <input
        id="<removed>"
        name="components-fieldset--with-textfield-textfield"
        type="text"
      >
    </div>
  </ds-field>
  <ds-field>
    <label
      data-weight="medium"
      for="<removed>"
    >
      Postnummer
    </label>
    <div>
      <input
        id="<removed>"
        inputmode="numeric"
        name="components-fieldset--with-textfield-textfield"
        pattern="[0-9]*"
        size="4"
        type="text"
      >
    </div>
  </ds-field>
  <ds-field>
    <label
      data-weight="medium"
      for="<removed>"
    >
      Poststed
    </label>
    <div>
      <input
        id="<removed>"
        name="components-fieldset--with-textfield-textfield2"
        size="25"
        type="text"
      >
    </div>
  </ds-field>
</fieldset>
`;
